# ros2_harwey

./: .gitignore  Architecture.drawio  CLAUDE.md  README.md  SLU_REAL.pgm  SLU_REAL.yaml  SLU_REAL_v2.pgm  SLU_REAL_v2.yaml  SLU_sim_export.pgm  SLU_sim_export.yaml  SLU_sim_ros.data  SLU_sim_save.pgm  SLU_sim_save.yaml  SLU_sim_serial.data  SLU_waypoints.yaml  dependencies.repos  package.xml  simulation.data  simulation.pgm  simulation.yaml  slu_harving.geojson  somefile.txt  waypoint_recorder.py
gazebo/: config.yaml
gazebo/models/: slu_simulation.sdf
scripts/: calibrateImu.py  imuData.py  waypoint_follower.py
src/imu_data/: CMakeLists.txt  package.xml
src/imu_data/src/: imu_data_pub.cpp
src/motion_controller/: package.xml
src/navigation_core/: CMakeLists.txt  README.md  dmke_can_hw_plugin.xml  package.xml
src/navigation_core/config/: diff_controller.yaml  joystick.yaml  mapper_params_localization.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  twist_mux.yaml
src/navigation_core/config/bot_bus/: bus.yml  dcsv_drive.eds
src/navigation_core/description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/navigation_core/launch/: can_control_launch.py  diffbot.launch.py  joystick_launch.py  launch_robot_launch.py  launch_sim_launch.py  localizationST_launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rsp_launch.py  slam_launch.py
src/navigation_core/rviz/: robot_model.rviz  slam_config.rviz
src/navigation_core/src/: dmke_can_hw_interface.cpp  sensor_fusion_node.cpp
src/navigation_core/worlds/: slu_simulation.sdf
src/safety_supervisor/: CMakeLists.txt  package.xml
