<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation_core</name>
  <version>0.0.0</version>
  <description>Package for handling the navigation by sensor processing</description>
  <maintainer email="klasf.lundgren@gmail.com">klas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>eigen</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>robot_state_publisher</depend>

    <!-- CANopen stack -->
  <depend>canopen</depend>
  <depend>canopen_core</depend>
  <depend>canopen_master_driver</depend>
  <depend>canopen_402_driver</depend>
  <depend>canopen_interfaces</depend>
  <depend>canopen_ros2_control</depend>
  <depend>canopen_ros2_controllers</depend>
  <depend>lely_core_libraries</depend>
  <depend>pluginlib</depend>

  <!-- ros2_control -->
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>robot_state_publisher</depend>
  <depend>hardware_interface</depend>


  <!-- URDF -->
  <depend>xacro</depend>
  <depend>urdf</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
